# metropy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  docs.yml  release.yml  tests.yml
docs/: index.md
docs/getting-started/: installation.md
planing/: ROADMAP.md  brainstorm.md  ci-cd-plan.md  ci-cd.md
src/metropy/: __init__.py
tests/: conftest.py
